--- a/templates/reclamation/index.html.twig
+++ b/templates/reclamation/index.html.twig
@@ -14,7 +14,7 @@
                 <th>actions</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="myTable" >
         {% for reclamation in reclamations %}
             <tr>
                 <td>{{ reclamation.id }}</td>
@@ -34,7 +34,23 @@
             </tr>
         {% endfor %}
         </tbody>
+        {{ knp_pagination_render(reclamations) }}
     </table>
 
     <a href="{{ path('app_reclamation_new') }}">Create new</a>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- chatbot-->
+    <script>
+        var botmanWidget = {
+            frameEndpoint: '{{ path("chatframe") }}',
+            chatServer: '{{ path("message") }}',
+            introMessage: 'Hello, I am a Foody ,You Can Ask Me Any Thing ',
+            title: 'Easy to Eat Chatbot',
+            mainColor: '#456765',
+            bubbleBackground: '#ff76f4',
+            aboutText: ''
+        };
+    </script>
+    <script src='https://cdn.jsdelivr.net/npm/botman-web-widget@0/build/js/widget.js'></script>
+    <!-- chatbot-->
 {% endblock %}
