--- a/templates/reclamation/new.html.twig
+++ b/templates/reclamation/new.html.twig
@@ -26,6 +26,12 @@
                         {{ form_errors(form.message,{ 'attr':{'class':'text-danger'}})   }}
                     </div>
                 </div>
+                
+                    <div class="col-sm-10">
+                        {{ form_widget(form.captcha,{ 'attr':{'class':'form-control'}})   }}
+                     
+                    </div>
+                
 
 
                 <div class="row mb-3">
