--- a/templates/reponse/index.html.twig
+++ b/templates/reponse/index.html.twig
@@ -13,7 +13,7 @@
                 <th>actions</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="myTable">
         {% for reponse in reponses %}
             <tr>
                 <td>{{ reponse.idRep }}</td>
@@ -32,7 +32,10 @@
            
         {% endfor %}
         </tbody>
+        {{ knp_pagination_render(reponses) }}
     </table>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 
     
 {% endblock %}
