--- a/templates/rec_front/new.html.twig
+++ b/templates/rec_front/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin.html.twig' %}
+{% extends 'test.html.twig' %}
 
 {% block title %}New Reclamation{% endblock %}
 
@@ -54,7 +54,7 @@
 
         </div>
     </div>
-    <a href="{{ path('app_reclamation_index') }}">Beck to list</a>
+    <a href="{{ path('reclamation_index') }}">Beck to list</a>
 
 {% endblock %}
 
