--- a/templates/rec_front/edit.html.twig
+++ b/templates/rec_front/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin.html.twig' %}
+{% extends 'test.html.twig' %}
 
 {% block title %}Edit Reclamation{% endblock %}
 
@@ -7,7 +7,7 @@
 
     {{ include('reclamation/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_reclamation_index') }}">back to list</a>
+    <a href="{{ path('reclamation_index') }}">back to list</a>
 
-    {{ include('reclamation/_delete_form.html.twig') }}
+    <a href="{{ path('reclamation_delete', {'id': reclamation.id}) }}">delete</a>
 {% endblock %}
