--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -85,6 +85,14 @@
             </a>
 
         </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="{{path("app_reponse_index")}}" data-toggle="collapse" data-target="#collapseTwo"
+               aria-expanded="true" aria-controls="collapseTwo">
+                <i class="fas fa-fw fa-cog"></i>
+                <span>Response</span>
+            </a>
+
+        </li>
 
         <!-- Nav Item - Utilities Collapse Menu -->
         <li class="nav-item">
